--- a/web/html/pages/cupdraw/game16.html
+++ b/web/html/pages/cupdraw/game16.html
@@ -97,173 +97,16 @@ var shareBasePath='undefined';
     <!--内容区域-->
     <div id="app" v-cloak>
            <div class="title">小组赛猜中八支出线球队，获得抽奖资格</div>
-           <div class="item">
-            <div class="group-name">A组</div>
-            <div class="group-list" flex="main:justify">
-                <div class="active">
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-            </div>
-           </div>
-           <div class="item">
-            <div class="group-name">A组</div>
-            <div class="group-list" flex="main:justify">
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-            </div>
-           </div>
-           <div class="item">
-            <div class="group-name">A组</div>
-            <div class="group-list" flex="main:justify">
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-            </div>
-           </div>
-           <div class="item">
-            <div class="group-name">A组</div>
-            <div class="group-list" flex="main:justify">
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-            </div>
-           </div>
-           <div class="item">
-            <div class="group-name">A组</div>
-            <div class="group-list" flex="main:justify">
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-            </div>
-           </div>
-           <div class="item">
-            <div class="group-name">A组</div>
-            <div class="group-list" flex="main:justify">
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-            </div>
-           </div>
-           <div class="item">
-            <div class="group-name">A组</div>
-            <div class="group-list" flex="main:justify">
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-            </div>
-           </div>
-           <div class="item">
-            <div class="group-name">A组</div>
-            <div class="group-list" flex="main:justify">
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="http://localhost:8080/statics/images/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-            </div>
+           <div class="item"  v-for="(item,index) in list"  >
+            <template v-for="(value,key) in item">
+                    <div class="group-name">{{key}}组</div>
+                    <div class="group-list"  flex="main:justify">
+                        <div v-for="item1 in value" :class="{active:selectstatus[index][item1.id]}"  @click="selectteam(index,item1.group32,item1.id)"  >
+                            <img :src="basePath+item1.imagePath" alt="">
+                            <p>{{item1.name}}</p>
+                        </div>
+                    </div>
+            </template>        
            </div>
           <div class="btn-wrap">
             <div class="submit-btn"></div>
@@ -273,7 +116,7 @@ var shareBasePath='undefined';
      <!--底部引用的js资源-->
  <script type="text/javascript" src="http://localhost:8080/statics/scripts/lib/vue/vue-66ba6d0e76.js"></script>
  <script type="text/javascript" src="http://localhost:8080/statics/scripts/common-jquery-b0bd05ea0a.js"></script>
-    <script type="text/javascript" src="http://localhost:8080/statics/scripts/page/cupDraw/game16-e0298fecf9.main.js"></script>
+    <script type="text/javascript" src="http://localhost:8080/statics/scripts/page/cupDraw/game16-41bf06f66e.main.js"></script>
 </body>
 
 </html>
