--- a/html/pages/cupdraw/game16.html
+++ b/html/pages/cupdraw/game16.html
@@ -12,173 +12,16 @@
     <!--内容区域-->
     <div id="app" v-cloak>
            <div class="title">小组赛猜中八支出线球队，获得抽奖资格</div>
-           <div class="item">
-            <div class="group-name">A组</div>
-            <div class="group-list" flex="main:justify">
-                <div class="active">
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-            </div>
-           </div>
-           <div class="item">
-            <div class="group-name">A组</div>
-            <div class="group-list" flex="main:justify">
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-            </div>
-           </div>
-           <div class="item">
-            <div class="group-name">A组</div>
-            <div class="group-list" flex="main:justify">
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-            </div>
-           </div>
-           <div class="item">
-            <div class="group-name">A组</div>
-            <div class="group-list" flex="main:justify">
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-            </div>
-           </div>
-           <div class="item">
-            <div class="group-name">A组</div>
-            <div class="group-list" flex="main:justify">
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-            </div>
-           </div>
-           <div class="item">
-            <div class="group-name">A组</div>
-            <div class="group-list" flex="main:justify">
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-            </div>
-           </div>
-           <div class="item">
-            <div class="group-name">A组</div>
-            <div class="group-list" flex="main:justify">
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-            </div>
-           </div>
-           <div class="item">
-            <div class="group-name">A组</div>
-            <div class="group-list" flex="main:justify">
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-                <div>
-                    <img src="<%=imgUrl%>/county-img.png" alt="">
-                    <p>俄罗斯</p>
-                </div>
-            </div>
+           <div class="item"  v-for="(item,index) in list"  >
+            <template v-for="(value,key) in item">
+                    <div class="group-name">{{key}}组</div>
+                    <div class="group-list"  flex="main:justify">
+                        <div v-for="item1 in value" :class="{active:selectstatus[index][item1.id]}"  @click="selectteam(index,item1.group32,item1.id)"  >
+                            <img :src="basePath+item1.imagePath" alt="">
+                            <p>{{item1.name}}</p>
+                        </div>
+                    </div>
+            </template>        
            </div>
           <div class="btn-wrap">
             <div class="submit-btn"></div>
