添加公众号二维码
1

--- a/html/pages/cupdraw/success.html
+++ b/html/pages/cupdraw/success.html
@@ -19,7 +19,13 @@
         </div>
         <div class="btn">
           <div class="share-btn" @click="share"></div>
-          <div class="floww-btn" @click="flow"></div>
+          <!-- <div class="floww-btn" @click="flow"></div> -->
+        </div>
+        <div class="flow-wrap">
+            <div class="tip">想知道获奖情况，请关注国网河北电力了解更多抽奖情况。</div>
+            <div class="erweima">
+              <img src="<%=imgUrl%>/erweima.png" alt="">
+            </div>
         </div>
       </div>
     </div>
