--- a/web/html/pages/cupdraw/rules.html
+++ b/web/html/pages/cupdraw/rules.html
@@ -6,10 +6,10 @@
   <meta charset="utf-8">
 	<title>风驰电掣世界杯</title>
 	<script>
-var basePath = 'http://39.106.50.228:8080/activity';
-var htmlbasePath='http://39.106.50.228:8080/activity/html';
-var imgUrl = 'http://39.106.50.228:8080/activity/statics/images';
-var proxypath='http://39.106.50.228:8080'; // 做黄金红包 html生成图片 图片不能跨域
+var basePath = 'http://worldcup.jcgame.net';
+var htmlbasePath='http://worldcup.jcgame.net/html';
+var imgUrl = 'http://worldcup.jcgame.net/statics/images';
+var proxypath='http://worldcup.jcgame.net'; // 做黄金红包 html生成图片 图片不能跨域
 var shareBasePath='undefined';
 !function(N, M) {
     function L() {
@@ -91,7 +91,7 @@ var shareBasePath='undefined';
 </script>
 
 
-	<link rel="stylesheet" href="http://39.106.50.228:8080/activity/statics/styles/main-1f641e69f9.css" />
+	<link rel="stylesheet" href="http://worldcup.jcgame.net/statics/styles/main-1f641e69f9.css" />
 </head>
 <body class="rules-body">
 	<!--内容区域-->
@@ -106,8 +106,8 @@ var shareBasePath='undefined';
         </div>
       </div>
    <!--底部引用的js资源-->
- <script type="text/javascript" src="http://39.106.50.228:8080/activity/statics/scripts/lib/vue/vue-728134de0a.js"></script>
- <script type="text/javascript" src="http://39.106.50.228:8080/activity/statics/scripts/common-jquery-13336e761c.js"></script>
+ <script type="text/javascript" src="http://worldcup.jcgame.net/statics/scripts/lib/vue/vue-728134de0a.js"></script>
+ <script type="text/javascript" src="http://worldcup.jcgame.net/statics/scripts/common-jquery-13336e761c.js"></script>
   <script>
     $(".goback").on("click",function(){
       history.go(-1);
