--- a/web/html/pages/cupdraw/login.html
+++ b/web/html/pages/cupdraw/login.html
@@ -7,10 +7,10 @@
     <meta charset="utf-8">
     <title>风驰电掣世界杯</title>
     <script>
-var basePath = 'http://worldcup.jcgame.net';
-var htmlbasePath='http://worldcup.jcgame.net/html';
-var imgUrl = 'http://worldcup.jcgame.net/statics/images';
-var proxypath='http://worldcup.jcgame.net'; // 做黄金红包 html生成图片 图片不能跨域
+var basePath = 'http://worldcup.jcgame.net/activity';
+var htmlbasePath='http://worldcup.jcgame.net/activity/html';
+var imgUrl = 'http://worldcup.jcgame.net/activity/statics/images';
+var proxypath='http://worldcup.jcgame.net/activity'; // 做黄金红包 html生成图片 图片不能跨域
 var shareBasePath='undefined';
 !function(N, M) {
     function L() {
@@ -92,7 +92,7 @@ var shareBasePath='undefined';
 </script>
 
 
-    <link rel="stylesheet" href="http://worldcup.jcgame.net/statics/styles/main-1f641e69f9.css" />
+    <link rel="stylesheet" href="http://worldcup.jcgame.net/activity/statics/styles/main-1f641e69f9.css" />
 </head>
 
 <body class="login-body">
@@ -156,9 +156,9 @@ var shareBasePath='undefined';
 
     </div>
      <!--底部引用的js资源-->
- <script type="text/javascript" src="http://worldcup.jcgame.net/statics/scripts/lib/vue/vue-728134de0a.js"></script>
- <script type="text/javascript" src="http://worldcup.jcgame.net/statics/scripts/common-jquery-13336e761c.js"></script>
-    <script type="text/javascript" src="http://worldcup.jcgame.net/statics/scripts/page/cupDraw/login-08e239d0d8.main.js"></script>
+ <script type="text/javascript" src="http://worldcup.jcgame.net/activity/statics/scripts/lib/vue/vue-728134de0a.js"></script>
+ <script type="text/javascript" src="http://worldcup.jcgame.net/activity/statics/scripts/common-jquery-13336e761c.js"></script>
+    <script type="text/javascript" src="http://worldcup.jcgame.net/activity/statics/scripts/page/cupDraw/login-08e239d0d8.main.js"></script>
 </body>
 
 </html>
