--- a/web/html/pages/cupdraw/success.html
+++ b/web/html/pages/cupdraw/success.html
@@ -6,10 +6,10 @@
   <meta charset="utf-8">
 	<title>风驰电掣世界杯</title>
 	<script>
-var basePath = 'http://worldcup.jcgame.net';
-var htmlbasePath='http://worldcup.jcgame.net/html';
-var imgUrl = 'http://worldcup.jcgame.net/statics/images';
-var proxypath='http://worldcup.jcgame.net'; // 做黄金红包 html生成图片 图片不能跨域
+var basePath = 'http://worldcup.jcgame.net/activity';
+var htmlbasePath='http://worldcup.jcgame.net/activity/html';
+var imgUrl = 'http://worldcup.jcgame.net/activity/statics/images';
+var proxypath='http://worldcup.jcgame.net/activity'; // 做黄金红包 html生成图片 图片不能跨域
 var shareBasePath='undefined';
 !function(N, M) {
     function L() {
@@ -91,7 +91,7 @@ var shareBasePath='undefined';
 </script>
 
 
-	<link rel="stylesheet" href="http://worldcup.jcgame.net/statics/styles/main-1f641e69f9.css" />
+	<link rel="stylesheet" href="http://worldcup.jcgame.net/activity/statics/styles/main-1f641e69f9.css" />
 </head>
 <body class="success-body">
   <!--内容区域-->
@@ -109,15 +109,15 @@ var shareBasePath='undefined';
         <div class="flow-wrap">
             <div class="tip">想知道获奖情况，请关注国网河北电力了解更多抽奖情况。</div>
             <div class="erweima">
-              <img src="http://worldcup.jcgame.net/statics/images/erweima.png" alt="">
+              <img src="http://worldcup.jcgame.net/activity/statics/images/erweima.png" alt="">
             </div>
         </div>
       </div>
     </div>
    <!--底部引用的js资源-->
- <script type="text/javascript" src="http://worldcup.jcgame.net/statics/scripts/lib/vue/vue-728134de0a.js"></script>
- <script type="text/javascript" src="http://worldcup.jcgame.net/statics/scripts/common-jquery-13336e761c.js"></script>
-  <script type="text/javascript" src="http://worldcup.jcgame.net/statics/scripts/page/cupDraw/success-69c88f0539.main.js"></script>
+ <script type="text/javascript" src="http://worldcup.jcgame.net/activity/statics/scripts/lib/vue/vue-728134de0a.js"></script>
+ <script type="text/javascript" src="http://worldcup.jcgame.net/activity/statics/scripts/common-jquery-13336e761c.js"></script>
+  <script type="text/javascript" src="http://worldcup.jcgame.net/activity/statics/scripts/page/cupDraw/success-69c88f0539.main.js"></script>
 </body>
 
 </html>
