--- a/html/pages/cupdraw/login.html
+++ b/html/pages/cupdraw/login.html
@@ -13,8 +13,8 @@
 <body class="login-body">
     <!--内容区域-->
     <div class="wrap" id="app">
+        <div class="goback1" @click="goback" ></div>
         <div class="login-wrap" v-show="status==1">
-            <div class="title">手机号登录</div>
             <div class="form">
                 <div class="input">
                     <span>手机号</span>
@@ -36,7 +36,6 @@
             </div>
         </div>
         <div class="login-wrap" v-show="status==2">
-                <div class="title">手机号注册</div>
                 <div class="form">
                     <div class="input">
                         <span>手机号</span>
@@ -47,7 +46,7 @@
                         <input class="input1" maxlength="10" v-model="rpassword" type="password">
                     </div>
                     <div class="input">
-                            <span>再次密码</span>
+                            <span>确认密码</span>
                             <input class="input1" maxlength="10" v-model="ragainpassword" type="password">
                         </div>
                     <div class="input" >
@@ -64,8 +63,7 @@
 
         <div class="info">
             <p>输入个人手机，设定密码，完成登录 </p>
-            <p>请牢记密码，密码丢失无法找回 </p>
-            <p>（但不影响兑奖）</p>
+            <p>请牢记密码，密码丢失无法找回 （但不影响兑奖）</p>
             <p>奖品发放以手机号作为凭证，请熟知</p>
         </div>
 
