--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,9 @@
 <body class="main-body">
 	<!--内容区域-->
 	<div id="app" v-cloak>
-       <div class="audio" @click="audioswitch" :class="{off:!audioStatus}"></div>
+	   <div class="audio" @click="audioswitch" :class="{off:!audioStatus}"></div>
+	   <div class="scroll">
+		   <div :class="{ani:isani}">截止至6月{{day}}日，已有超过{{countNum}}位小伙伴成功参与了活动哟~快来和你的朋友们一起赢取丰厚大奖吧！</div></div>
       <div class="list-btn">
 		  <div class="beginBtn" @click="showlist"></div>
 		  <div class="rewardBtn" @click="toreward"></div>
