--- a/html/pages/cupdraw/game4.html
+++ b/html/pages/cupdraw/game4.html
@@ -15,16 +15,18 @@
            <div class="title">
                <div class="icon-title4"></div>
            </div>
-           <div class="item" v-if="!isSelected" flex="main:justify"  v-for="(item,index) in list" :key="item.id"  >
+           <div class="item" v-if="!isSelected" flex="main:justify cross:center"  v-for="(item,index) in list" :key="item.id"  >
             <div class="name" :class="{active:teamstatus[index].teamId==item.teamA}" @click="tap(index,item.teamA)" >
-                {{item.teamAName}}
+                <img class="teamimg" :src="item.newteamAImage" alt="">  
+                <span>{{item.teamAName}}</span> 
             </div>
             <div class="info">
                 <p>{{item.matchCode.toUpperCase()}} {{item.matchAdress}}</p>
                 <p><span>{{item.data}}</span> {{item.hour}}</p>
             </div>
             <div class="name" :class="{active:teamstatus[index].teamId==item.teamB}" @click="tap(index,item.teamB)" >
-             {{item.teamBName}}
+                <img class="teamimg" :src="item.newteamBImage" alt="">
+                <span>{{item.teamBName}}</span>
             </div>
         </div>
         <div class="item" v-if="isSelected" flex="main:justify"  v-for="(item,index) in list" :key="item.id"  >
