--- a/html/pages/cupdraw/success.html
+++ b/html/pages/cupdraw/success.html
@@ -14,7 +14,7 @@
      <div class="goback1" @click="goback" ></div>
       <div class="success-wrap">
          <div class="content">
-            恭喜你竞猜成功，{{text[code]}}全部结束，中奖名单与微信公众号推送中奖信息同步。       
+          竞猜结果提交成功，如需重选可返回首页重新开始竞猜，以最后一次提交结果为准。       
         </div>
         <div class="flow-wrap">
             <div class="tip">想知道获奖情况，请关注国网河北电力了解更多抽奖情况。</div>
