--- a/web/html/pages/cupdraw/rules.html
+++ b/web/html/pages/cupdraw/rules.html
@@ -91,7 +91,7 @@ var shareBasePath='undefined';
 </script>
 
 
-	<link rel="stylesheet" href="http://worldcup.toptour.cn/activity/statics/styles/main-c062f8d4e3.css" />
+	<link rel="stylesheet" href="http://worldcup.toptour.cn/activity/statics/styles/main-a36fb4e584.css" />
 </head>
 <body class="rules-body">
 	<!--内容区域-->
@@ -101,16 +101,36 @@ var shareBasePath='undefined';
           <div class="scroll-info">
               <ul>
                 <li>
-                  <span>1、</span>
-                  <p>游戏参与者根据世界杯比赛进程，按阶段选择晋级球队参与游戏。</p>
+                  <p>游戏参与者根据世界杯比赛进程，按阶段选择晋级球队参与游戏。每阶段结束后对符合中奖资格的用户进行随机抽奖，中奖结果将按阶段在国网河北电力微信公众号公布，用户也可在微信H5中奖名单中查看中奖结果。工作人员将会在中奖结果公示后的3个工作日内与中奖者登记的手机号码取得联系。</p>
                 </li>
                 <li>
-                  <span>2、</span>
-                  <p>中奖结果将按阶段在国网河北电力微信公众号公布，用户也可在微信H5中奖名单中查看中奖结果。</p>
+                  <span>竞猜规则</span>
+                  <p>小组赛阶段，参与者从32支球队中选择16支球队，猜中8支获得该阶段的抽奖资格；<br>
+                    1/8决赛阶段，参与者从16支球队中选择8支球队，猜中6支获得该阶段的抽奖资格；<br>
+                    1/4决赛阶段，参与者从8支球队中选择4支球队，猜中3支获得该阶段的抽奖资格；<br>
+                    半决赛阶段，参与者预期2场比赛的比分，比分竞猜结果不包含加时赛与点球结果，同时猜中2场比分则获得该阶段的抽奖资格；<br>
+                    决赛阶段，参与者预期比赛的比分，比分竞猜结果不包含加时赛与点球结果，猜中则获得该阶段的抽奖资格。</p>
                 </li>
                 <li>
-                    <span>3、</span>
-                    <p>工作人员将会在中奖结果公示后的3个工作日内与中奖者登记的手机号码取得联系。</p>
+                    <span>奖品设置：</span>
+                    <p>小组赛 <br>
+                       3名，小米8手机；<br>
+                       1／8决赛 <br>
+                       3名，索尼蓝牙音箱；<br>
+                       1／4决赛 <br>
+                       3名，电动平衡车；<br>
+                       半决赛 <br>
+                       5台，冷风扇；<br>
+                       决赛 <br>
+                       5台，空气净化器；<br>
+                       幸运奖<br>
+                       参与即可抽奖，每阶段50名，10元电e宝电费红包；<br>
+                  </li>
+                  <li>
+                    <span></span>
+                    <p>
+
+                    </p>
                   </li>
               </ul>
       
