--- a/web/html/pages/cupdraw/game8.html
+++ b/web/html/pages/cupdraw/game8.html
@@ -91,7 +91,7 @@ var shareBasePath='undefined';
 </script>
 
 
-	<link rel="stylesheet" href="http://worldcup.toptour.cn/activity/statics/styles/main-c062f8d4e3.css" />
+	<link rel="stylesheet" href="http://worldcup.toptour.cn/activity/statics/styles/main-a36fb4e584.css" />
 </head>
 <body class="game8-body">
     <!--内容区域-->
@@ -102,16 +102,18 @@ var shareBasePath='undefined';
            </div>
 
            <article>
-               <div class="item" v-if="!isSelected"  flex="main:justify"  v-for="(item,index) in list" :key="item.id"  >
-                   <div class="name" :class="{active:teamstatus[index].teamId==item.teamA}" @click="tap(index,item.teamA)" >
-                       {{item.teamAName}}
+               <div class="item" v-if="!isSelected"  flex="main:justify cross:center"  v-for="(item,index) in list" :key="item.id"  >
+                   <div class="name" :class="{active:teamstatus[index].teamId==item.teamA}"  @click="tap(index,item.teamA)" >
+                    <img class="teamimg" :src="item.newteamAImage" alt="">  
+                    <span>{{item.teamAName}}</span> 
                    </div>
                    <div class="info">
                        <p>{{item.matchCode.toUpperCase()}} {{item.matchAdress}}</p>
                        <p><span>{{item.data}}</span> {{item.hour}}</p>
                    </div>
                    <div class="name" :class="{active:teamstatus[index].teamId==item.teamB}" @click="tap(index,item.teamB)" >
-                    {{item.teamBName}}
+                    <img class="teamimg" :src="item.newteamBImage" alt="">
+                    <span>{{item.teamBName}}</span>
                    </div>
                </div>
                <!-- 选中 -->
@@ -135,7 +137,7 @@ var shareBasePath='undefined';
      <!--底部引用的js资源-->
  <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/lib/vue/vue-728134de0a.js"></script>
  <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/common-jquery-13336e761c.js"></script>
-    <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/page/cupDraw/game8-918ec9f74e.main.js"></script>
+    <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/page/cupDraw/game8-be982098b8.main.js"></script>
 </body>
 
 </html>
