--- a/html/pages/cupdraw/game16.html
+++ b/html/pages/cupdraw/game16.html
@@ -10,6 +10,7 @@
 </head>
 <body class="game16-body">
     <!--内容区域-->
+    @@include('audio.html')
     <div id="app" v-cloak>
             <div class="goback" @click="goback" ></div>
            <div class="title">
