--- a/html/pages/cupdraw/login.html
+++ b/html/pages/cupdraw/login.html
@@ -12,6 +12,7 @@
 
 <body class="login-body">
     <!--内容区域-->
+    @@include('audio.html')
     <div class="wrap" id="app">
         <div class="goback1" @click="goback" ></div>
         <div class="login-wrap" v-show="status==1">
