--- a/html/pages/cupdraw/reward.html
+++ b/html/pages/cupdraw/reward.html
@@ -10,6 +10,7 @@
 </head>
 <body class="reward-body">
     <!--内容区域-->
+    @@include('audio.html')
     <div id="app" v-cloak>
             <div class="goback1" @click="goback" ></div>
             <div class="common-wrap">
