--- a/html/pages/cupdraw/rules.html
+++ b/html/pages/cupdraw/rules.html
@@ -9,8 +9,10 @@
 	<link rel="stylesheet" href="<%=cssUrl%>/main.css" />
 </head>
 <body class="rules-body">
-	<!--内容区域-->
+  <!--内容区域-->
+  @@include('audio.html')
      <div class="goback"></div>
+
       <div class="rules-wrap">
         <div class="content">
           <div class="scroll-info">
@@ -27,7 +29,7 @@
                     决赛阶段，参与者预期比赛的比分，比分竞猜结果不包含加时赛与点球结果，猜中则获得该阶段的抽奖资格。</p>
                 </li>
                 <li>
-                    <span>奖品设置：</span>
+                    <span>奖品设置</span>
                     <p>小组赛 <br>
                        3名，小米8手机；<br>
                        1／8决赛 <br>
