--- a/html/shared/vue-footer.html
+++ b/html/shared/vue-footer.html
@@ -1,3 +1,4 @@
  <!--底部引用的js资源-->
  <script type="text/javascript" src="<%=jsUrl%>/lib/vue/vue.js"></script>
  <script type="text/javascript" src="<%=jsUrl%>/common-jquery.js"></script>
+ <script type="text/javascript" src="<%=jsUrl%>/common/index.js"></script>
