--- a/web/html/pages/cupdraw/rules.html
+++ b/web/html/pages/cupdraw/rules.html
@@ -91,11 +91,13 @@ var shareBasePath='undefined';
 </script>
 
 
-	<link rel="stylesheet" href="http://worldcup.toptour.cn/activity/statics/styles/main-a36fb4e584.css" />
+	<link rel="stylesheet" href="http://worldcup.toptour.cn/activity/statics/styles/main-33efaf033b.css" />
 </head>
 <body class="rules-body">
-	<!--内容区域-->
+  <!--内容区域-->
+  <div class="audio"  id="J_audio" ></div>
      <div class="goback"></div>
+
       <div class="rules-wrap">
         <div class="content">
           <div class="scroll-info">
@@ -112,7 +114,7 @@ var shareBasePath='undefined';
                     决赛阶段，参与者预期比赛的比分，比分竞猜结果不包含加时赛与点球结果，猜中则获得该阶段的抽奖资格。</p>
                 </li>
                 <li>
-                    <span>奖品设置：</span>
+                    <span>奖品设置</span>
                     <p>小组赛 <br>
                        3名，小米8手机；<br>
                        1／8决赛 <br>
@@ -140,6 +142,7 @@ var shareBasePath='undefined';
    <!--底部引用的js资源-->
  <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/lib/vue/vue-728134de0a.js"></script>
  <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/common-jquery-13336e761c.js"></script>
+ <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/common/index-a5b970c914.js"></script>
   <script>
     $(".goback").on("click",function(){
       history.go(-1);
