--- a/web/html/pages/cupdraw/success.html
+++ b/web/html/pages/cupdraw/success.html
@@ -91,10 +91,11 @@ var shareBasePath='undefined';
 </script>
 
 
-	<link rel="stylesheet" href="http://worldcup.toptour.cn/activity/statics/styles/main-a36fb4e584.css" />
+	<link rel="stylesheet" href="http://worldcup.toptour.cn/activity/statics/styles/main-33efaf033b.css" />
 </head>
 <body class="success-body">
   <!--内容区域-->
+  <div class="audio"  id="J_audio" ></div>
   <div id="app" v-cloak>
      <div class="goback1" @click="goback" ></div>
       <div class="success-wrap">
@@ -117,6 +118,7 @@ var shareBasePath='undefined';
    <!--底部引用的js资源-->
  <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/lib/vue/vue-728134de0a.js"></script>
  <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/common-jquery-13336e761c.js"></script>
+ <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/common/index-a5b970c914.js"></script>
   <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/page/cupDraw/success-69c88f0539.main.js"></script>
 </body>
 
