--- a/html/index.html
+++ b/html/index.html
@@ -10,8 +10,9 @@
 </head>
 <body class="main-body">
 	<!--内容区域-->
+	@@include('audio.html')
 	<div id="app" v-cloak>
-	   <div class="audio" @click="audioswitch" :class="{off:!audioStatus}"></div>
+	   <!-- <div class="audio" @click="audioswitch" :class="{off:!audioStatus}"></div> -->
 	   <div class="scroll">
 		   <div :class="{ani:isani}">截止至{{month}}月{{day}}日，已有超过{{countNum}}位小伙伴成功参与了活动哟~快来和你的朋友们一起赢取丰厚大奖吧！</div></div>
       <div class="list-btn">
