--- a/html/pages/cupdraw/game1.html
+++ b/html/pages/cupdraw/game1.html
@@ -10,6 +10,7 @@
 </head>
 <body class="game2-body">
     <!--内容区域-->
+    @@include('audio.html')
     <div id="app" v-cloak>
            <div class="title3"><span>决赛</span></div>
            <div class="des">
