--- a/html/pages/cupdraw/game2.html
+++ b/html/pages/cupdraw/game2.html
@@ -10,6 +10,7 @@
 </head>
 <body class="game2-body">
     <!--内容区域-->
+    @@include('audio.html')
     <div id="app" v-cloak>
             <div class="goback" @click="goback" ></div>
         <template v-if="roundsCode==4">
