--- a/web/html/pages/cupdraw/game16.html
+++ b/web/html/pages/cupdraw/game16.html
@@ -91,10 +91,11 @@ var shareBasePath='undefined';
 </script>
 
 
-	<link rel="stylesheet" href="http://worldcup.toptour.cn/activity/statics/styles/main-a36fb4e584.css" />
+	<link rel="stylesheet" href="http://worldcup.toptour.cn/activity/statics/styles/main-33efaf033b.css" />
 </head>
 <body class="game16-body">
     <!--内容区域-->
+    <div class="audio"  id="J_audio" ></div>
     <div id="app" v-cloak>
             <div class="goback" @click="goback" ></div>
            <div class="title">
@@ -128,6 +129,7 @@ var shareBasePath='undefined';
      <!--底部引用的js资源-->
  <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/lib/vue/vue-728134de0a.js"></script>
  <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/common-jquery-13336e761c.js"></script>
+ <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/common/index-a5b970c914.js"></script>
     <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/page/cupDraw/game16-26891d0b32.main.js"></script>
 </body>
 
