--- a/web/html/pages/cupdraw/login.html
+++ b/web/html/pages/cupdraw/login.html
@@ -92,11 +92,12 @@ var shareBasePath='undefined';
 </script>
 
 
-    <link rel="stylesheet" href="http://worldcup.toptour.cn/activity/statics/styles/main-a36fb4e584.css" />
+    <link rel="stylesheet" href="http://worldcup.toptour.cn/activity/statics/styles/main-33efaf033b.css" />
 </head>
 
 <body class="login-body">
     <!--内容区域-->
+    <div class="audio"  id="J_audio" ></div>
     <div class="wrap" id="app">
         <div class="goback1" @click="goback" ></div>
         <div class="login-wrap" v-show="status==1">
@@ -156,6 +157,7 @@ var shareBasePath='undefined';
      <!--底部引用的js资源-->
  <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/lib/vue/vue-728134de0a.js"></script>
  <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/common-jquery-13336e761c.js"></script>
+ <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/common/index-a5b970c914.js"></script>
     <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/page/cupDraw/login-d3b75e196f.main.js"></script>
 </body>
 
