--- a/web/html/pages/cupdraw/login.html
+++ b/web/html/pages/cupdraw/login.html
@@ -97,7 +97,7 @@ var shareBasePath='undefined';
 
 <body class="login-body">
     <!--内容区域-->
-    <div class="audio"  id="J_audio" ></div>
+    <!-- <div class="audio"  id="J_audio" ></div> -->
     <div class="wrap" id="app">
         <div class="goback1" @click="goback" ></div>
         <div class="login-wrap" v-show="status==1">
@@ -157,7 +157,7 @@ var shareBasePath='undefined';
      <!--底部引用的js资源-->
  <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/lib/vue/vue-728134de0a.js"></script>
  <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/common-jquery-13336e761c.js"></script>
- <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/common/index-a5b970c914.js"></script>
+ <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/common/index-4e4fdbadb0.js"></script>
     <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/page/cupDraw/login-d3b75e196f.main.js"></script>
 </body>
 
