--- a/web/html/pages/cupdraw/rules.html
+++ b/web/html/pages/cupdraw/rules.html
@@ -95,7 +95,7 @@ var shareBasePath='undefined';
 </head>
 <body class="rules-body">
   <!--内容区域-->
-  <div class="audio"  id="J_audio" ></div>
+  <!-- <div class="audio"  id="J_audio" ></div> -->
      <div class="goback"></div>
 
       <div class="rules-wrap">
@@ -142,7 +142,7 @@ var shareBasePath='undefined';
    <!--底部引用的js资源-->
  <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/lib/vue/vue-728134de0a.js"></script>
  <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/common-jquery-13336e761c.js"></script>
- <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/common/index-a5b970c914.js"></script>
+ <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/common/index-4e4fdbadb0.js"></script>
   <script>
     $(".goback").on("click",function(){
       history.go(-1);
