--- a/web/html/pages/cupdraw/game1.html
+++ b/web/html/pages/cupdraw/game1.html
@@ -95,7 +95,7 @@ var shareBasePath='undefined';
 </head>
 <body class="game2-body">
     <!--内容区域-->
-    <div class="audio"  id="J_audio" ></div>
+    <!-- <div class="audio"  id="J_audio" ></div> -->
     <div id="app" v-cloak>
            <div class="title3"><span>决赛</span></div>
            <div class="des">
@@ -129,7 +129,7 @@ var shareBasePath='undefined';
      <!--底部引用的js资源-->
  <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/lib/vue/vue-728134de0a.js"></script>
  <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/common-jquery-13336e761c.js"></script>
- <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/common/index-a5b970c914.js"></script>
+ <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/common/index-4e4fdbadb0.js"></script>
     <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/page/cupDraw/game16-26891d0b32.main.js"></script>
 </body>
 
