--- a/web/html/pages/cupdraw/game8.html
+++ b/web/html/pages/cupdraw/game8.html
@@ -95,7 +95,7 @@ var shareBasePath='undefined';
 </head>
 <body class="game8-body">
     <!--内容区域-->
-    <div class="audio"  id="J_audio" ></div>
+    <!-- <div class="audio"  id="J_audio" ></div> -->
     <div id="app" v-cloak>
             <div class="goback" @click="goback" ></div>
            <div class="title">
@@ -138,7 +138,7 @@ var shareBasePath='undefined';
      <!--底部引用的js资源-->
  <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/lib/vue/vue-728134de0a.js"></script>
  <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/common-jquery-13336e761c.js"></script>
- <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/common/index-a5b970c914.js"></script>
+ <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/common/index-4e4fdbadb0.js"></script>
     <script type="text/javascript" src="http://worldcup.toptour.cn/activity/statics/scripts/page/cupDraw/game8-be982098b8.main.js"></script>
 </body>
 
